--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </p>
       <h3 id="my-greeting">Greeting goes here</h3>
 
-      <img id="my-pic" src="" alt="Time of Day Image" class="flexible" />
+      <img id="my-pic" src="images" alt="Time of Day Image" class="flexible" />
 
       <footer>
         <p>
@@ -87,6 +87,6 @@
           "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
         );
     </script>
-    <script src="" script.js></script>
+    <script src="script.js"></script>
   </body>
 </html>
